--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -314,6 +314,242 @@ F_{ST} = \frac{2 \bar{p}\bar{q} - \frac{1}{K}\sum_{i=1}^K 2p_iq_i }{2
 i.e. $F_{ST}$ is the proportion of the variance explained by the
 subpopulation labels.
 
+
+\newpage
+\section{Genetic Drift and Neutral Diversity}
+
+Various sources of randomness are inherent in evolution. One major
+source of stochasticity in population genetics is genetic drift. 
+Genetic drift occurs because more or less copies of an allele by chance
+can be transmitted to the next generation. This can occur because by
+chance the individuals carrying a particular allele can 
+leave more or less offspring in the next generation. In a sexual
+population genetic drift also occurs because mendelian transmission
+means that only one of the two alleles in an individual, chosen at
+random at a locus, is transmitted to the offspring. 
+
+Genetic drift can play a role in the dynamics of all alleles and
+populations, but it will play the biggest role for neutral alleles. A neutral polymorphism occurs when the segregating alleles at a
+polymorphic site have no discernable effect on
+the fitness (we'll make clear what we mean by discernable later, for
+the moment think of this as “no effect” on fitness). 
+
+
+\subsection{Loss of heterozygosity due to to drift.}
+
+Genetic drift will, in the absence of new mutations, slowly purge our
+population of neutral genetic diversity as alleles slowly drift to high or low
+frequencies and are lost or fixed over time. \\
+
+Imagine a population of a constant size $N$ diploid individuals, and
+that we are examining a locus segregating for two alleles that are
+neutral with respect to each other.  This population is randomly
+mating with respect to the alleles at this locus.\\
+
+In generation $t$ our current level of heterozygosity is $H_t$,
+i.e. the probability that two randomly sampled alleles in generation
+$t$ are non-identical is $H_t$. Assuming that the mutation rate is
+zero (or vanishing small), what is our level of heterozygosity in
+generation $t+1$?\\
+
+In the next generation ($t+1$) we are looking at the alleles in the
+offspring of generation $t$. If we randomly sample two alleles in generation
+$t+1$ which had different parental alleles in generation $t$ then it
+is just like drawing two random alleles from generation $t$. So the
+probability that these two alleles in generation $t+1$, that have
+different parental alleles in generation $t$, are non-identical is
+$H_t$. \\
+
+Conversely, if our pair of alleles have the same parental allele in
+the proceeding generation (i.e. the alleles are identical by descent
+one generation back) then these two alleles must be identical (as we
+are not allowing for any mutation). \\
+
+In a diploid population of size $N$ individuals there are $2N$
+alleles. The probability that our two alleles have the same parental
+allele in the proceeding generation is $1/(2N)$, the probability that
+they have different parental alleles is is $1-1/(2N)$. So by the above
+argument the expected heterozygosity in generation $t+1$ is
+\begin{equation}
+H_{t+1} = \frac{1}{2N} \times 0 + \left(1-\frac{1}{2N} \right)H_t
+\end{equation}
+By this argument if the heterzygosity in generation $0$ is $H_0$ our
+expected heterozygosity in generation $t$ is
+\begin{equation}
+H_{t+1} = \left(1-\frac{1}{2N} \right)^tH_0
+\end{equation}
+i.e. the expected heterozygosity with our population is decaying
+geometrically with each passing generation. If we assume that $1/(2N)
+\ll 1$ then we can approximate this geometric decay by an exponential
+decay, such that
+\begin{equation}
+H_{t+1} =H_0 \exp \left(-\frac{t}{2N} \right)  
+\end{equation}
+i.e. heterozygosity decays exponentially at a rate $1/(2N)$.
+
+\subsection{Levels of diversity maintained by a balance between
+ mutation and drift. }
+
+
+\paragraph{heterozygosity}
+Looking backwards in time from one generation to the next, we are going
+to say that two alleles which have the same parental allele (i.e. find
+their common ancestor) in the
+preceding generation have {\emph coalesced}, and refer to this event as a {\emph coalescent event}.\\
+
+The probability that our pair of randomly sampled alleles have
+coalesced in the preceding generation is $1/(2N)$, the probability
+that our pair of alleles fail to coalesce is $1-1/(2N)$. \\
+
+The probability that a mutation changes the identity of the
+transmitted allele is $\mu$ per generation. So the probability of no
+mutation occurring is $(1-\mu)$. We'll assume that when a mutation
+occurs it creates some new allelic type which is not present in the
+population. This assumption (commonly called the infinitely-many-alleles model) makes the math slightly cleaner, and also
+is not too bad an assumption biologically.\\
+
+This model lets us calculate when our two alleles last shared a common
+ancestor and whether these alleles are identical as a result of
+failing to mutate since this shared ancestor.  For example we can work out the probability that our
+two randomly sampled alleles coalesced $2$ generations in the past
+(i.e. they fail to coalesce in generation $1$ and then coalescent in
+generation $2$), and
+that they are identical as
+\begin{equation}
+\left(1- \frac{1}{2N} \right) \frac{1}{2N} (1-\mu)^4
+\end{equation}
+note the power of $4$ is because our two alleles have to have failed
+to mutate through $2$ meioses each.\\
+
+More generally the probability that our alleles coalesce in generation
+$t+1$ and are identical due to no mutation to either allele in the
+subsequent generations is
+\begin{equation}
+P(\textrm{coal. in t+1 \& no mutations}) =  \frac{1}{2N} \left(1- \frac{1}{2N} \right)^t \left(1-\mu \right)^{2(t+1)}
+\end{equation}
+assuming that $\frac{1}{2N} \ll$ and $\mu \ll 1$ then we can
+approximate this as
+\begin{equation}
+P(\textrm{coal. in t+1 \& no mutations}) \approx  \frac{1}{2N}
+e^{-t/(2N)} e^{-2\mu (t+1)}
+\end{equation}
+to make this slightly easier on ourselves lets further assume that $t
+\approx t+1$ and so rewrite this as
+\begin{equation}
+\approx \frac{1}{2N} e^{-t(2\mu+1/(2N))}
+\end{equation}
+
+If we sample two alleles at random from the population we will not in
+general know when they share a common ancestor. In which case we will
+need to integrate out over when this coalescent event occured. Doing
+this we find the probability that our two alleles are identical due to
+no mutation on either ancestral lineage since the pair shared a common
+ancestor to be
+\begin{equation}
+\frac{1}{2N} \int_0^{\infty} e^{-t(2\mu+1/(2N))} dt =
+\frac{1/(2N)}{1/(2N)+2\mu} = \frac{1}{1+4N\mu}
+\end{equation}
+The probability that our our pair of alleles are non-identical is
+simply one minus this, i.e.
+\begin{equation}
+\frac{4N\mu}{1+4N\mu} \label{eqn:hetero}
+\end{equation}
+This compound parameter $4N\mu$, the population-scaled mutation rate,
+will come up a number of times so we'll give it its own name
+\begin{equation}
+\theta = 4N\mu
+\end{equation}
+
+So all else being equal, species with larger population sizes should
+have proportionally higher level of polymorphism at neutral sites.\\
+
+
+\subsection{The effective population size.}
+In practice populations rarely conform to our assumptions of being
+constant in size with low variance in reproduction success. Real
+populations experience dramatic fluctuations in size, and there is
+often high variance in reproductive success. Thus rates of drift in
+natural populations are often a lot higher than the census population
+size would imply.\\
+
+To cope with this population geneticists often invoke the concept of
+an effective population size ($N_e$). In many situations (but not all), departures from model assumptions can be captured by substituting $N_e$ for $N$.
+
+Specifically the effective population size ($N_e$) is the population
+size that would result in the same rate of drift in an idealized constant
+population size, obeying our modeling assumptions, as that observed in
+our true population. \\
+
+If population sizes vary rapidly in size, we can (if certain conditions are met)
+replace our population size by the harmonic mean population size.
+Consider a diploid population of variable size, whose size is $N_t$ $t$ generations into the
+past. The probability our pairs of alleles have not coalesced by the generation $t^{th}$ is
+given by
+\begin{equation}
+\prod_{i=1}^{t} \left(1-\frac{1}{2N_t} \right)
+\end{equation}
+note that this is simply collapses to our original expression
+$\left(1-\frac{1}{2N } \right)^t $ if $N_i$ is constant. If $1/(N_i)$ is
+small, then we can approximate $1-\frac{1}{2N_i}$ by
+$\exp(-\frac{1}{2N_i})$. Such that if $N_i$ is never too small
+\begin{equation}
+\prod_{i=1}^{t} \left(1-\frac{1}{2N_i} \right)
+\approx \prod_{i=1}^{t} \exp \left( -\frac{1}{2N_i} \right)   =
+\exp \left(- \sum_{i=1}^{t} \frac{1}{2N_i} \right) .
+\end{equation}
+In our constant population size case
+the probability of failing to coalesce is $\exp(-t/(2N))$. So the
+variable population coalescent probabilities are still of the same form but
+the exponent has changed. Comparing the exponent in the two cases we see
+\begin{equation}
+\frac{t}{2N} = \sum_{i=1}^{t} \frac{1}{2N_i}
+\end{equation}
+so that if we want a constant effective population size ($N_e$) that has the same
+coalescent probability as our variable population we need to set
+$N=N_e$ and rearrange this to see
+\begin{equation}
+N_e =\frac{1}{\frac{1}{t} \sum_{i=1}^{t} \frac{1}{N_i} }.
+\end{equation}
+this is the harmonic mean of the varying population size. Thus our
+effective population size, the size of an idealized constant
+population which matches the rate of genetic drift, is the harmonic
+mean true population size over time. The harmonic mean is very
+storngly affected by small values, such that if our population size is
+one million $99\%$ of the time but drops to a $1000$ every hundred or
+so generations, $N_e$ will be much closer to $1000$ than a million.\\
+
+
+%would result in the same rate of drift
+%Luckily, in many (not all) situations, departures from model assumptions can be captured by substituting Ne for N, i.e., by plugging in a fictitious N that leads to the same level of genetic drift as observed.
+
+Variance in reproductive success will also affect our effective
+population size. Even if our population has a large constant size of $N$
+individuals, if only small proportion of them get to reproduce then
+the rate of drift will reflect this much small number of reproducing
+individuals. If only $N_M$ males get to contribute to the next
+generation and $N_F$ females get to contribute to the next
+generation. When our two alleles pick an ancestor, $25\%$ of the time
+our alleles were both in a female ancestor in which case they coalesce
+with probability $1/(2N_F)$, and $25\%$ of the time they are both in a
+male ancestor in which case they coalesce with probability
+$1/(2N_M)$. The remaining $50\%$ of the time our ancestral lineages
+are in two individuals are different sexes in a generation so cannot
+coalescence.  Therefore, our probability of coalescence in the preceding
+generation is
+\begin{equation}
+\frac{1}{4}\frac{1}{2N_M}+\frac{1}{4}\frac{1}{2N_F} =
+\frac{1}{8}\frac{N_F+M_M}{N_FN_M} 
+\end{equation}
+i.e. the rate of coalescence is the harmonic mean of the two
+sexes population sizes, 
+equating this to $\frac{1}{2N_e}$ we find
+\begin{equation}
+N_e = \frac{4N_FN_M}{N_F+N_M}
+\end{equation}
+Thus if reproductive success is very skewed in one sex (e.g. $N_M \ll
+N/2$) our effective population size will be much reduced as a result.\\
+
+
 \newpage
 
 \section{Correlations between loci, linkage disequilibrium, and recombination.}
@@ -1922,10 +2158,7 @@ doing so we find that
 
 \section{Genetic drift and Neutral alleles}
 
-A neutral polymorphism occurs when the segregating alleles at a
-polymorphic site have no discernable effect on
-the fitness of the organism (i.e. if they have any effect on fitness
-at all drift overpowers it $Ns \ll 1$).\\
+
 
 \subsection{The fixation of neutral alleles}
 It is very unlikely that a rare neutral allele accidentally drifts up
@@ -2015,134 +2248,6 @@ differences separating our pair of species is simply $2\mu (1-C) T$.\\
 
 
 
-\subsection{Loss of heterozygosity due to to drift.}
-
-Genetic drift will, in the absence of new mutations, slowly purge our
-population of genetic diversity as alleles slowly drift to high or low
-frequencies and are lost or fixed over time. \\
-
-Imagine a population of a constant size $N$ diploid individuals, and
-that we are examining a locus segregating for two alleles that are
-neutral with respect to each other.  This population is randomly
-mating with respect to the alleles at this locus.\\
-
-In generation $t$ our current level of heterozygosity is $H_t$,
-i.e. the probability that two randomly sampled alleles in generation
-$t$ are non-identical is $H_t$. Assuming that the mutation rate is
-zero (or vanishing small), what is our level of heterozygosity in
-generation $t+1$?\\
-
-In the next generation ($t+1$) we are looking at the alleles in the
-offspring of generation $t$. If we randomly sample two alleles in generation
-$t+1$ which had different parental alleles in generation $t$ then it
-is just like drawing two random alleles from generation $t$. So the
-probability that these two alleles in generation $t+1$, that have
-different parental alleles in generation $t$, are non-identical is
-$H_t$. \\
-
-Conversely, if our pair of alleles have the same parental allele in
-the proceeding generation (i.e. the alleles are identical by descent
-one generation back) then these two alleles must be identical (as we
-are not allowing for any mutation). \\
-
-In a diploid population of size $N$ individuals there are $2N$
-alleles. The probability that our two alleles have the same parental
-allele in the proceeding generation is $1/(2N)$, the probability that
-they have different parental alleles is is $1-1/(2N)$. So by the above
-argument the expected heterozygosity in generation $t+1$ is
-\begin{equation}
-H_{t+1} = \frac{1}{2N} \times 0 + \left(1-\frac{1}{2N} \right)H_t
-\end{equation}
-By this argument if the heterzygosity in generation $0$ is $H_0$ our
-expected heterozygosity in generation $t$ is
-\begin{equation}
-H_{t+1} = \left(1-\frac{1}{2N} \right)^tH_0
-\end{equation}
-i.e. the expected heterozygosity with our population is decaying
-geometrically with each passing generation. If we assume that $1/(2N)
-\ll 1$ then we can approximate this geometric decay by an exponential
-decay, such that
-\begin{equation}
-H_{t+1} =H_0 \exp \left(-\frac{t}{2N} \right)  
-\end{equation}
-i.e. heterozygosity decays exponentially at a rate $1/(2N)$.
-
-\subsection{Levels of diversity maintained by a balance between
- mutation and drift. }
-
-
-\paragraph{heterozygosity}
-Looking backwards in time from one generation to the next, we are going
-to say that two alleles which have the same parental allele (i.e. find
-their common ancestor) in the
-preceding generation have {\emph coalesced}, and refer to this event as a {\emph coalescent event}.\\
-
-The probability that our pair of randomly sampled alleles have
-coalesced in the preceding generation is $1/(2N)$, the probability
-that our pair of alleles fail to coalesce is $1-1/(2N)$. \\
-
-The probability that a mutation changes the identity of the
-transmitted allele is $\mu$ per generation. So the probability of no
-mutation occurring is $(1-\mu)$. We'll assume that when a mutation
-occurs it creates some new allelic type which is not present in the
-population. This assumption (commonly called the infinitely-many-alleles model) makes the math slightly cleaner, and also
-is not too bad an assumption biologically.\\
-
-This model lets us calculate when our two alleles last shared a common
-ancestor and whether these alleles are identical as a result of
-failing to mutate since this shared ancestor.  For example we can work out the probability that our
-two randomly sampled alleles coalesced $2$ generations in the past
-(i.e. they fail to coalesce in generation $1$ and then coalescent in
-generation $2$), and
-that they are identical as
-\begin{equation}
-\left(1- \frac{1}{2N} \right) \frac{1}{2N} (1-\mu)^4
-\end{equation}
-note the power of $4$ is because our two alleles have to have failed
-to mutate through $2$ meioses each.\\
-
-More generally the probability that our alleles coalesce in generation
-$t+1$ and are identical due to no mutation to either allele in the
-subsequent generations is
-\begin{equation}
-P(\textrm{coal. in t+1 \& no mutations}) =  \frac{1}{2N} \left(1- \frac{1}{2N} \right)^t \left(1-\mu \right)^{2(t+1)}
-\end{equation}
-assuming that $\frac{1}{2N} \ll$ and $\mu \ll 1$ then we can
-approximate this as
-\begin{equation}
-P(\textrm{coal. in t+1 \& no mutations}) \approx  \frac{1}{2N}
-e^{-t/(2N)} e^{-2\mu (t+1)}
-\end{equation}
-to make this slightly easier on ourselves lets further assume that $t
-\approx t+1$ and so rewrite this as
-\begin{equation}
-\approx \frac{1}{2N} e^{-t(2\mu+1/(2N))}
-\end{equation}
-
-If we sample two alleles at random from the population we will not in
-general know when they share a common ancestor. In which case we will
-need to integrate out over when this coalescent event occured. Doing
-this we find the probability that our two alleles are identical due to
-no mutation on either ancestral lineage since the pair shared a common
-ancestor to be
-\begin{equation}
-\frac{1}{2N} \int_0^{\infty} e^{-t(2\mu+1/(2N))} dt =
-\frac{1/(2N)}{1/(2N)+2\mu} = \frac{1}{1+4N\mu}
-\end{equation}
-The probability that our our pair of alleles are non-identical is
-simply one minus this, i.e.
-\begin{equation}
-\frac{4N\mu}{1+4N\mu} \label{eqn:hetero}
-\end{equation}
-This compound parameter $4N\mu$, the population-scaled mutation rate,
-will come up a number of times so we'll give it its own name
-\begin{equation}
-\theta = 4N\mu
-\end{equation}
-
-So all else being equal, species with larger population sizes should
-have proportionally higher level of polymorphism at neutral sites.\\
-
 \paragraph{Pairwise Coalescent time distribution and the number of
  pairwise differences.}
 In the preceding calculation you'll note that we could first specify
@@ -2207,90 +2312,6 @@ estimate of the population size $N$ that is consistent with our levels
 of neutral polymorphism.
 
 
-\subsection{The effective population size.}
-In practice populations rarely conform to our assumptions of being
-constant in size with low variance in reproduction success. Real
-populations experience dramatic fluctuations in size, and there is
-often high variance in reproductive success. Thus rates of drift in
-natural populations are often a lot higher than the census population
-size would imply.\\
-
-To cope with this population geneticists often invoke the concept of
-an effective population size ($N_e$). In many situations (but not all), departures from model assumptions can be captured by substituting $N_e$ for $N$.
-
-Specifically the effective population size ($N_e$) is the population
-size that would result in the same rate of drift in an idealized constant
-population size, obeying our modeling assumptions, as that observed in
-our true population. \\
-
-If population sizes vary rapidly in size, we can (if certain conditions are met)
-replace our population size by the harmonic mean population size.
-Consider a diploid population of variable size, whose size is $N_t$ $t$ generations into the
-past. The probability our pairs of alleles have not coalesced by the generation $t^{th}$ is
-given by
-\begin{equation}
-\prod_{i=1}^{t} \left(1-\frac{1}{2N_t} \right)
-\end{equation}
-note that this is simply collapses to our original expression
-$\left(1-\frac{1}{2N } \right)^t $ if $N_i$ is constant. If $1/(N_i)$ is
-small, then we can approximate $1-\frac{1}{2N_i}$ by
-$\exp(-\frac{1}{2N_i})$. Such that if $N_i$ is never too small
-\begin{equation}
-\prod_{i=1}^{t} \left(1-\frac{1}{2N_i} \right)
-\approx \prod_{i=1}^{t} \exp \left( -\frac{1}{2N_i} \right)   =
-\exp \left(- \sum_{i=1}^{t} \frac{1}{2N_i} \right) .
-\end{equation}
-In our constant population size case
-the probability of failing to coalesce is $\exp(-t/(2N))$. So the
-variable population coalescent probabilities are still of the same form but
-the exponent has changed. Comparing the exponent in the two cases we see
-\begin{equation}
-\frac{t}{2N} = \sum_{i=1}^{t} \frac{1}{2N_i}
-\end{equation}
-so that if we want a constant effective population size ($N_e$) that has the same
-coalescent probability as our variable population we need to set
-$N=N_e$ and rearrange this to see
-\begin{equation}
-N_e =\frac{1}{\frac{1}{t} \sum_{i=1}^{t} \frac{1}{N_i} }.
-\end{equation}
-this is the harmonic mean of the varying population size. Thus our
-effective population size, the size of an idealized constant
-population which matches the rate of genetic drift, is the harmonic
-mean true population size over time. The harmonic mean is very
-storngly affected by small values, such that if our population size is
-one million $99\%$ of the time but drops to a $1000$ every hundred or
-so generations, $N_e$ will be much closer to $1000$ than a million.\\
-
-
-%would result in the same rate of drift
-%Luckily, in many (not all) situations, departures from model assumptions can be captured by substituting Ne for N, i.e., by plugging in a fictitious N that leads to the same level of genetic drift as observed.
-
-Variance in reproductive success will also affect our effective
-population size. Even if our population has a large constant size of $N$
-individuals, if only small proportion of them get to reproduce then
-the rate of drift will reflect this much small number of reproducing
-individuals. If only $N_M$ males get to contribute to the next
-generation and $N_F$ females get to contribute to the next
-generation. When our two alleles pick an ancestor, $25\%$ of the time
-our alleles were both in a female ancestor in which case they coalesce
-with probability $1/(2N_F)$, and $25\%$ of the time they are both in a
-male ancestor in which case they coalesce with probability
-$1/(2N_M)$. The remaining $50\%$ of the time our ancestral lineages
-are in two individuals are different sexes in a generation so cannot
-coalescence.  Therefore, our probability of coalescence in the preceding
-generation is
-\begin{equation}
-\frac{1}{4}\frac{1}{2N_M}+\frac{1}{4}\frac{1}{2N_F} =
-\frac{1}{8}\frac{N_F+M_M}{N_FN_M} 
-\end{equation}
-i.e. the rate of coalescence is the harmonic mean of the two
-sexes population sizes, 
-equating this to $\frac{1}{2N_e}$ we find
-\begin{equation}
-N_e = \frac{4N_FN_M}{N_F+N_M}
-\end{equation}
-Thus if reproductive success is very skewed in one sex (e.g. $N_M \ll
-N/2$) our effective population size will be much reduced as a result.\\
 
 \subsection{The coalescent process of a sample of alleles.}
 
