Small changes to the drift section

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -390,23 +390,21 @@ i.e. heterozygosity decays exponentially at a rate $1/(2N)$.
 \subsection{Levels of diversity maintained by a balance between
  mutation and drift. }
 
-
-\paragraph{heterozygosity}
 Looking backwards in time from one generation to the next, we are going
 to say that two alleles which have the same parental allele (i.e. find
 their common ancestor) in the
-preceding generation have {\emph coalesced}, and refer to this event as a {\emph coalescent event}.\\
+preceding generation have {\emph coalesced}, and refer to this event as a {\emph coalescent event}.
 
 The probability that our pair of randomly sampled alleles have
 coalesced in the preceding generation is $1/(2N)$, the probability
-that our pair of alleles fail to coalesce is $1-1/(2N)$. \\
+that our pair of alleles fail to coalesce is $1-1/(2N)$. 
 
 The probability that a mutation changes the identity of the
 transmitted allele is $\mu$ per generation. So the probability of no
 mutation occurring is $(1-\mu)$. We'll assume that when a mutation
 occurs it creates some new allelic type which is not present in the
 population. This assumption (commonly called the infinitely-many-alleles model) makes the math slightly cleaner, and also
-is not too bad an assumption biologically.\\
+is not too bad an assumption biologically.
 
 This model lets us calculate when our two alleles last shared a common
 ancestor and whether these alleles are identical as a result of
@@ -419,7 +417,7 @@ that they are identical as
 \left(1- \frac{1}{2N} \right) \frac{1}{2N} (1-\mu)^4
 \end{equation}
 note the power of $4$ is because our two alleles have to have failed
-to mutate through $2$ meioses each.\\
+to mutate through $2$ meioses each.
 
 More generally the probability that our alleles coalesce in generation
 $t+1$ and are identical due to no mutation to either allele in the
@@ -461,7 +459,7 @@ will come up a number of times so we'll give it its own name
 \end{equation}
 
 So all else being equal, species with larger population sizes should
-have proportionally higher level of polymorphism at neutral sites.\\
+have proportionally higher levels of neutral polymorphism. 
 
 
 \subsection{The effective population size.}
