--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -11,12 +11,15 @@
 \usepackage{fullpage}
 
 \newcommand{\gc}[1]{{\em \color{green} #1}}
+\newcommand{\sa}[1]{{\color{rev1} #1}}
 \newcommand{\plr}[1]{{\em \color{green} (#1)}}
 \newcommand{\E}{\mathbb{E}}
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\half}{\tfrac{1}{2}}
 
 \newcommand{\wbar}{\overline{w}}
+
+\definecolor{rev1}{rgb}{1, 0, 0}
 
 \begin{document}
 
@@ -39,23 +42,16 @@
 \section{Allele and Genotype frequencies}
 
 \subsection{Allele frequencies}
-Consider a diploid autosomal locus segregating two alleles ($1$ and $2$). Let's say that $f_{11}$ is the frequency of $11$ homozygotes and $f_{12}$ is the frequency of $12$ heterozygotes. The frequency of allele $1$ in the population is
+Consider a diploid autosomal locus segregating \sa{at} two alleles \sa{($A_1$ and $A_2$)}. \sa{Let $N_{11}$ and $N_{12}$ be the number of $A_1A_1$ homozygotes and $A_1A_2$ heterozygotes, respectively. Moreover, let $N$ be the total number of diploid individuals in the population. We can then define the relative frequencies of $A_1A_1$ and $A_1A_2$ genotypes as $f_{11} = N_{11}/N$ and $f_{12} = N_{12}/N$, respectively. The frequency of allele $A_1$ in the population is then given by}
 \begin{equation}
-p = f_{11} + f_{12}/2
+p = \frac{2 N_{11} + N_{12}}{2N} = f_{11} + \frac{1}{2} f_{12}. % Modified by Simon
 \end{equation}
-note that this makes no assumption of Hardy-Weinberg [see below]. The frequency of the alternate allele ($2$) is then just $q=1-p$.
+\sa{N}ote that this makes no assumption of Hardy-Weinberg [see below]. The frequency of the alternate allele \sa{($A_2$)} is then just $q=1-p$.
 
 \subsection{Hardy-Weinberg}
 
-Imagine a population mating at random with respect to our genotypes, i.e.
-no inbreeding, no population structure, no sex differences in allele frequencies.
-
-
-The frequency of allele $1$ in the population at the time of reproduction is $p$.
-A $11$ genotype is made by reaching out into our population and selecting two $1$ alelle gametes to form a zygote. Therefore, the probability that
-our individual is a $11$ homozygote is $p^2$. This probability is also
-the expected frequency of the $11$ homozygote in the population.The
-expected frequency of our three genotypes is
+Imagine a population mating at random with respect to genotypes, i.e.\
+no inbreeding, no population structure, no sex differences in allele frequencies. The frequency of allele \sa{$A_1$} in the population at the time of reproduction is $p$. \sa{An $A_1A_1$} genotype is made by reaching out into our population and \sa{independently drawing} two \sa{$A_1$} alelle gametes to form a zygote. Therefore, the probability that \sa{an} individual is \sa{an $A_1A_1$} homozygote is $p^2$. This probability is also the expected frequency of the \sa{$A_1A_1$} homozygote in the population. The expected frequency of \sa{the three possible} genotypes is
 %\begin{table}[htp!]
 \begin{center}
 \begin{tabular}{|ccc|}
@@ -64,13 +60,13 @@ $f_{11}$ & $f_{12}$ & $f_{22}$ \\
 \hline
 $p^2$ & $2pq$ & $q^2$ \\
 \hline
-\end{tabular}
+\end{tabular}\,.
 \end{center}
 %\caption{\textbf{Hardy Weinberg}} \label{table:HWE}
 %\end{table}
 Note that we only need to assume random mating with
-respect to our allele in order for these expected frequencies to hold,
-as long at $p$ is the frequency of the $1$ allele in the population at
+respect to our \sa{alleles} in order for these expected frequencies to hold,
+as long at $p$ is the frequency of the \sa{$A_1$} allele in the population at
 the time when gametes fuse.
 
 
@@ -96,26 +92,23 @@ the time when gametes fuse.
 
 \subsection{Relatedness coefficients}
 We will define two alleles to be identical by descent if they are
-identical due to a common ancestor in the past few generations (for the moment ignoring the
-possibility of mutation). For example parent and child share exactly
-one allele identical by descent at a locus (assuming that the two
-parents of the child are randomly mated individuals from the population).\\
+identical due to a common ancestor in the past few generations. \sa{For the moment, we ignore mutation, and we will be more precise about what we mean by `past few generations' later on.} For example, parent and child share exactly
+one allele identical by descent at a locus\sa{, assuming that the two
+parents of the child are randomly mated individuals from the population}.\\
 
 A key quantity is the probability that our pair of individuals share
 0, 1, or 2 alleles identical by descent. We denote these probabilities
 by $r_0$, $r_1$, and $r_2$ respectively. See Table \ref{table:IBDprobs} for
 some examples. \\
 
-One summary of relatedness, which will be of help to us, is the probability that one allele picked at
-random from each of our two individuals is identical by descent.  
-We call this quantity the coefficient of kinship of individual $i$ and $j$, $F_{ij}$, and can
-we calculate it as
+One summary of relatedness \sa{that will be important} is the probability that \sa{two alleles picked at random, one from each of the two different individuals $i$ and $j$, are} identical by descent. We call this quantity the coefficient of kinship of individual\sa{s} $i$ and $j$\sa{, and denote it by $F_{ij}$\sa. It is calculated as}
 \begin{equation}
-F_{ij}= 0 \times r_0 + \frac{1}{4} r_1  + \frac{1}{2} r_2  \label{eqn:coeffkinship}
+F_{ij}= 0 \times r_0 + \frac{1}{4} r_1  + \frac{1}{2} r_2. 
+\label{eqn:coeffkinship}
 \end{equation}
 
-This quantity will appear multiple times, in both our discussion of
-inbreeding and our discussion of the phenotypic resemblance between relatives.\\
+\sa{The coefficient of kinship} will appear multiple times, in both our discussion of
+inbreeding and \sa{in the context of} phenotypic resemblance between relatives.\\
 
 \begin{table}
 \begin{center}
@@ -142,40 +135,39 @@ more closely related to each other than two random individuals drawn
 from some reference population.  \\
 
 When two related individuals produce an offspring, that individual can
-receive two alleles that are identical by descent, i.e. they
+receive two alleles that are identical by descent, i.e.\ they
 can be homozygous by descent (sometimes termed autozygous), due to the
 fact that they have two copies of an allele through different paths
 through the pedigree.  This increased likelihood of being homozygous
 relative to an outbred individual is the most obvious effect of
-inbreeding, and the one that will be of most interest to us as it
+inbreeding\sa{. It is also} the one that will be of most interest to us\sa{,} as it
 underlies a lot of our ideas about inbreeding depression and
 population structure.\\
 
 
-As the offspring receives a random allele from each parent ($i$ and $j$) the
-probability that those two alleles are identical by descent is our
-kinship coefficient $F_{ij}$ of the two parents (i.e. the quantity we
-defined in eqn. \ref{eqn:coeffkinship}). This follows from the fact that
-our child's genotype is made by sampling an allele at random from each
-of our parents.\\
-
+As the offspring receives a random allele from each parent ($i$ and $j$)\sa{, } the
+probability that those two alleles are identical by descent is \sa{equal to the}
+kinship coefficient $F_{ij}$ of the two parents (Eqn.\ \ref{eqn:coeffkinship}). This follows from the fact that
+\sa{the genotype of the offspring} is made by sampling an allele at random from each
+of our parents. \sa{We will use IBD for identical by descent.} \\
 
 The only way the offspring can be heterozygous ($A_1 A_2$) is if their two alleles at a
-locus, are not IBD (otherwise they'd necessarily be homozygous). Therefore, the probability that they are
+locus are not IBD (otherwise \sa{they would} necessarily be homozygous). Therefore, the probability that they are
 heterozygous is
 \begin{equation}
-(1-F) 2p q.
+(1-F) 2p q,
 \end{equation}
-Our offspring can homozygous for the $A_1$ allele two different ways,
-they can have two non-IBD alleles which happen to be the $A_1$ allele ,
+\sa{where we have dropped the indices $i$ and $j$ for simplicity.}
+\sa{The} offspring can \sa{be} homozygous for the $A_1$ allele \sa{in} two different ways\sa{. 
+T}hey can have two non-IBD alleles which happen to be the $A_1$ allele,
 or their two alleles can be IBD, such that they inherited the $A_1$ by
-two different routes from the same ancestor. Thus the probability they
+two different routes from the same ancestor. Thus\sa{,} the probability they
 are homozygous is
 \begin{equation}
-(1-F) p^2 + F p
+(1-F) p^2 + F p.
 \end{equation}
-Therefore, our three genotype probabilities can be written as given in
-Table \ref{table:GeneralizedHWE}, generalizing our Hardy Weinberg
+Therefore, \sa{the frequencies of the three possible genotypes} can be written as given in
+Table \ref{table:GeneralizedHWE}, \sa{which provides a generalization of the} Hardy\sa{--}Weinberg
 proportions.\\
 
 \begin{table}
